<resources>
    <string name="app_name">Game_Idea_01</string>

    <string name="text_desc">dummy</string>

    <string name="play">PLAY</string>

    <string name="setting">SETTING</string>

    <string name="quit">QUIT</string>

    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>

    <string name="clear">Clear</string>

    <string name="enter">enter</string>

</resources>
