<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmc_ultima.game_idea_01.PlayActivity">

    <RelativeLayout
        android:id="@+id/codepanel"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:paddingEnd="65sp"
        android:paddingStart="65sp">


        <TextView
            android:id="@+id/passCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passCodeTextView"
            android:layout_below="@+id/passCodeTextView"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="41dp">

            <EditText
                android:id="@+id/pin1"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/code_border"
                android:enabled="true"
                android:inputType="number"
                android:labelFor="@+id/pin1"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pin2"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/pin1"
                android:background="@drawable/code_border"
                android:enabled="true"
                android:inputType="number"
                android:labelFor="@+id/pin2"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pin3"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/pin2"
                android:background="@drawable/code_border"
                android:enabled="true"
                android:inputType="number"
                android:labelFor="@+id/pin3"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pin4"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/pin3"
                android:background="@drawable/code_border"
                android:enabled="true"
                android:inputType="number"
                android:labelFor="@+id/pin4"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp" />


        </RelativeLayout>

    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/codepanel"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/key1"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_1"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key2"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_2"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key3"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_3"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key4"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_4"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key5"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_5"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key6"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_6"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key7"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_7"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key8"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_8"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/key9"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_9"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/keyClear"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_clear_background"
            android:text="@string/clear"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/key0"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_button_background"
            android:text="@string/_0"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <Button
            android:id="@+id/keyEnter"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_margin="4sp"
            android:background="@drawable/key_enter_background"
            android:text="@string/enter"
            android:textColor="@color/cardview_light_background" />

    </GridLayout>

</RelativeLayout>